--- a/app/templates/reference.html
+++ b/app/templates/reference.html
@@ -16,10 +16,10 @@
         <a href="{% url 'cafes:category' %}" class="reference-category">카테고리로 찾기</a>
         <a href="/index/" class="reference-keyword">아무거나</a>
       </div>
-      <div class="right-section">
+      <div class="reference-right-section">
         <a href="/faq/" class="FAQ">문의</a>
         <a href="/login/" class="login">로그인</a>
-        <a href="/index/" class="createaccount">회원가입</a>
+        <a href="/register/" class="createaccount">회원가입</a>
       </div>
     </section>
     {% block search %}{% endblock %} {% block activate %}{% endblock %} {% block login %}{% endblock %} {% comment %}
