--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,35 +1,21 @@
-{% extends "reference.html" %} {% block search %}
-{% include "partials/home_search.html" %}
+{% extends "reference.html" %}
+{% load static %}
+
+{% block search %}
+  {% include "partials/home_search.html" %}
 {% endblock %}
-{% block activate%}
-{% comment %} <main class = 'main-container'>
-    <div class='wrapper'>
-        <div class='carousel'>
-        	<div class='slide'>
-                <img src="../static/css/image/KakaoTalk_20221007_222113499.jpg" frameborder="0" allowfullscreen></img>
-            </div>
-            <div class='slide'>
-                <img src="/intro-to-html/123.png" frameborder="0" allowfullscreen></img>
-            </div>
-            <div class="slide">
-                <img src="/intro-to-html/112.jpg" frameborder="0" allowfullscreen></img>
-            </div>
-        </div>
-    </div>      
-</main> {% endcomment %}
-{% endblock %} 
 
-{%block script%} 
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        let currentIndex = 1;
-        const totalSlides = 5;
-        const slideInterval = 5000;
+{% block activate %}
+<link rel="stylesheet" href="{% static 'cafes/css/_cafe_cards.css' %}">
+<main class="home-main-container">
+  <section class="home-container">
+    <h2>추천 카페</h2>
+    <div class="home-page-scroll">
+      {% include "cafes/_cafe_cards.html" with cafes=recommend_cafes %}
+    </div>
+  </section>
+</main>
+{% endblock %}
 
-        setInterval(() => {
-            document.getElementById(`home-s${currentIndex}`).checked = true;
-            currentIndex = (currentIndex % totalSlides) + 1;
-        }, slideInterval);
-    });
-</script>
-{%endblock%}
+{# 슬라이드 스크립트도 제거 #}
+{% block script %}{% endblock %}
