--- a/app/static/css/total.css
+++ b/app/static/css/total.css
@@ -96,11 +96,12 @@ a {
 }
 
 /* header-body.css */
-.main-container {
+.home-main-container{
   display: flex;
   justify-content: center;
   margin: 0 auto;
 }
+
 .carousel-item {
   width: 300px;
   height: 200px;
