--- a/cafes/templates/cafes/_cafe_cards.html
+++ b/cafes/templates/cafes/_cafe_cards.html
@@ -1,3 +1,4 @@
+{% load static %}
 <div class="cc_slider">
   <div class="cc_track" id="cafeSlider">
     {% for cafe in cafes %}
@@ -12,9 +13,9 @@
           {% if cafe.google_photo_url %}
             <img class="cc_card_img" src="{{ cafe.google_photo_url }}" alt="{{ name }}">
           {% else %}
-            <div style="height:180px;display:flex;align-items:center;justify-content:center;border:1px dashed #ddd;border-radius:8px;margin-bottom:10px;">
-              <small>사진 없음</small>
-            </div>
+            <img class="cc_card_img"
+                src="{% static 'css/image/SEOSEONG-IDA.png' %}"
+                alt="기본 이미지">
           {% endif %}
 
           <h3 class="cc_card_title">{{ name }}</h3>
