--- a/app/templates/reference.html
+++ b/app/templates/reference.html
@@ -14,7 +14,7 @@
       <div class="reference-middle-section">
         <a href="{% url 'cafes:findbymap' %}" class="reference-map">지도로 찾기</a>
         <a href="{% url 'cafes:category' %}" class="reference-category">카테고리로 찾기</a>
-        <a href="/index/" class="reference-keyword">아무거나</a>
+        <a href="/chatbot/" class="reference-keyword">chatbot</a>
       </div>
       <div class="reference-right-section">
         <a href="/faq/" class="FAQ">문의</a>
