--- a/app/templates/reference.html
+++ b/app/templates/reference.html
@@ -20,7 +20,7 @@
         <a href="/faq/" class="FAQ">문의</a>
         {% if request.user.is_authenticated %}
           <span class="user-info">
-            {{ request.user.username }} 님
+            {{ request.session.display_name|default:request.user.username }} 님
             <a href="{% url 'logout' %}" class="logout">로그아웃</a>
           </span>
         {% else %}
