--- a/app/static/css/total.css
+++ b/app/static/css/total.css
@@ -613,3 +613,37 @@ a {
 .login_section a {
   text-decoration: none;
 }
+
+
+/* mypage.html */
+.mypage-body {
+  text-align : center;
+  padding : 100px 20px;
+  background-color : #fafafa;
+  color : #333;
+}
+
+.update-box {
+  display: inline-block;
+  background: #fff;
+  padding : 40px 60px;
+  border-radius: 16px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+}
+
+.emoji {
+    font-size: 48px;
+    margin-bottom: 10px;
+}
+
+.notice-text {
+    font-size: 20px;
+    font-weight: 600;
+    color: #555;
+}
+
+.sub-text {
+    font-size: 15px;
+    color: #777;
+    margin-top: 8px;
+}
