--- a/app/templates/reference.html
+++ b/app/templates/reference.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     {% load static %}
+    {% load tz %}
     <link rel="stylesheet" href="{% static 'css/total.css' %}" />
   </head>
   <body id="reference-wrap">
@@ -21,6 +22,7 @@
         {% if request.user.is_authenticated %}
           <span class="user-info">
             {{ request.session.display_name|default:request.user.username }} 님
+            <a href="/mypage" class="logout">마이페이지</a>
             <a href="{% url 'logout' %}" class="logout">로그아웃</a>
           </span>
         {% else %}
