--- a/app/templates/reference.html
+++ b/app/templates/reference.html
@@ -17,9 +17,14 @@
         <a href="/chatbot/" class="reference-keyword">chatbot</a>
       </div>
       <div class="reference-right-section">
+        {% if user.is_authenticated %}
+        <a href="/mypage/" class="mypage">마이페이지</a>
+        <a href="{% url 'logout' %}" class="logout">로그아웃</a>
+        {% else %}
         <a href="/faq/" class="FAQ">문의</a>
         <a href="/login/" class="login">로그인</a>
         <a href="/register/" class="createaccount">회원가입</a>
+        {% endif %}
       </div>
     </section>
     {% block search %}{% endblock %} {% block activate %}{% endblock %} {% block login %}{% endblock %} {% comment %}
