--- a/app/templates/reference.html
+++ b/app/templates/reference.html
@@ -17,6 +17,7 @@
         <a href="/chatbot/" class="reference-keyword">chatbot</a>
       </div>
       <div class="reference-right-section">
+        <a href="/faq/" class="FAQ">문의</a>
         {% if request.user.is_authenticated %}
         <span class="user-info">
           {{ request.session.display_name|default:request.user.username }} 님
