--- a/app/static/css/total.css
+++ b/app/static/css/total.css
@@ -96,7 +96,7 @@ a {
 }
 
 /* header-body.css */
-.home-main-container{
+.home-main-container {
   display: flex;
   justify-content: center;
   margin: 0 auto;
@@ -614,36 +614,35 @@ a {
   text-decoration: none;
 }
 
-
 /* mypage.html */
 .mypage-body {
-  text-align : center;
-  padding : 100px 20px;
-  background-color : #fafafa;
-  color : #333;
+  text-align: center;
+  padding: 100px 20px;
+  background-color: #fafafa;
+  color: #333;
 }
 
 .update-box {
   display: inline-block;
   background: #fff;
-  padding : 40px 60px;
+  padding: 40px 60px;
   border-radius: 16px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
 }
 
 .emoji {
-    font-size: 48px;
-    margin-bottom: 10px;
+  font-size: 48px;
+  margin-bottom: 10px;
 }
 
 .notice-text {
-    font-size: 20px;
-    font-weight: 600;
-    color: #555;
+  font-size: 20px;
+  font-weight: 600;
+  color: #555;
 }
 
 .sub-text {
-    font-size: 15px;
-    color: #777;
-    margin-top: 8px;
+  font-size: 15px;
+  color: #777;
+  margin-top: 8px;
 }
